--- a/.gitignore
+++ b/.gitignore
@@ -148,3 +148,18 @@ cython_debug/
 .env.local
 .env.*.local
 
+# Terraform
+.terraform/
+*.tfstate
+*.tfstate.*
+crash.log
+crash.*.log
+*.tfvars
+*.tfvars.json
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+.terraformrc
+terraform.rc
+
